update user Resource

--- a/Gateway/application/modules/api/views/scripts/error/error.phtml
+++ b/Gateway/application/modules/api/views/scripts/error/error.phtml
@@ -1,1 +1,5 @@
-<?php echo 'tidak ada';?>
+<?php $message = $this->message;?>
+<?php $exeption = $this->exception;?>
+<?php echo $message?>
+<br/>
+<?php echo $exeption;?>
